test/libsolidity/syntaxTests/nameAndTypeResolution/567_require_visibility_specifiers_v050.sol
pragma experimental "v0.5.0";
contract C {
    function f() pure { }
}
// ----
// SyntaxError: (47-68): No visibility specified. Did you intend to add "public"?
